--- a/calendar.css
+++ b/calendar.css
@@ -1,3 +1,7 @@
+table {
+  border-collapse: collapse;
+}
+
 table, th, td {
   border: 1px solid black;
   text-align: center;
@@ -9,12 +13,16 @@ th, td {
   width: 50px;
 }
 
+td {
+  font-weight: bold;
+}
+
 .even {
   background-color: aqua;
 }
 
-.currentday {
-  background-color: aqua;
+.today {
+  background-color: rgb(255, 255, 107);
 }
 
 .saturday {
@@ -25,6 +33,6 @@ th, td {
   background-color: #FFD1D1;
 }
 
-.nextmonth {
-  background-color: #777;
+.lastmonth, .nextmonth {
+  background-color: #DEDEDE;
 }
