--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -1,4 +1,4 @@
-table {
+/* table {
   border-collapse: collapse;
 }
 
@@ -19,7 +19,7 @@ td {
 
 .even {
   background-color: aqua;
-}
+} */
 
 .today {
   background-color: rgb(255, 255, 107);
